--- a/src/atoms/card/style.css
+++ b/src/atoms/card/style.css
@@ -1,6 +1,9 @@
 .card-box {
   background-color: white;
   border-radius: 0.8rem;
+
+  box-shadow: 0px 2.979px 59.574px 0px rgba(0, 0, 0, 0.08);
+
 }
 
 .card-box .card-container .img img {
