--- a/src/pages/home/components/services/style.css
+++ b/src/pages/home/components/services/style.css
@@ -13,6 +13,10 @@
   gap: 0 1rem;
 }
 
+.services .container .card-box {
+  box-shadow: none;
+}
+
 .services .container .card-box .card-container .title {
   padding: 0.75rem 0;
   font-size: 1.5rem;
