--- a/src/pages/home/components/menu/style.css
+++ b/src/pages/home/components/menu/style.css
@@ -103,3 +103,35 @@
     padding: 0.8rem 1rem;
   }
 }
+
+@media only screen and (max-width: 380px) {
+  .menu h1.main-title {
+    font-size: 1.8rem;
+    line-height: 1.8rem;
+  }
+}
+
+
+@media only screen and (max-width: 380px) {
+  
+  .menu .box .menu-item .box-item img {
+    width: 40%;
+  }
+  
+  .menu .box .menu-item h2 {
+    font-size: 0.85rem;
+    padding-bottom: 0;
+    padding-top: 0.2rem;
+  }
+  
+  .menu .box .menu-item p {
+    font-size: 0.5rem;
+    line-height: 0.85rem;
+  }
+
+  .menu .box button {
+    font-weight: 600;
+    font-size: 0.6rem;
+    padding: 0.5rem 0.8rem;
+  }
+}
