--- a/src/pages/home/components/services/style.css
+++ b/src/pages/home/components/services/style.css
@@ -85,3 +85,10 @@
     line-height: 1.2rem;
   }
 }
+
+@media only screen and (max-width: 440px) {
+  .services .container h1.main-title {
+    font-size: 1.7rem;
+    line-height: 1.8rem;
+  }
+}
