--- a/src/pages/blog-details/components/blog-details-content/style.css
+++ b/src/pages/blog-details/components/blog-details-content/style.css
@@ -84,7 +84,7 @@
   .blog-details-content .container {
     padding: 4.5rem 6.5rem;
   }
-  .blog-page .title h1.main-title {
+  .blog-details-content .title h1.main-title {
     font-size: 2.8rem;
   }
   .blog-details-content .container .blogs {
