--- a/src/pages/home/components/menu/style.css
+++ b/src/pages/home/components/menu/style.css
@@ -78,7 +78,7 @@
     line-height: 2rem;
   }
   .menu .box .menu-item .box-item {
-    margin: 0.8rem;
+    margin: 0.8rem 0.5rem;
   }
   
   .menu .box .menu-item .box-item img {
