--- a/src/pages/menu/menu-hero/style.css
+++ b/src/pages/menu/menu-hero/style.css
@@ -240,6 +240,16 @@
     font-size: 0.7rem;
   }
   .menu-hero .title h1.main-title {
-    font-size: 2.5rem;
+    font-size: 2.4rem;
+  }
+  .menu-hero .title p {
+    font-size: 0.7rem;
+    line-height: 1rem;
+  }
+  .menu-hero .cards .card .text {
+    padding: 0.5rem 0.45rem 1rem 0.45rem;
+  }
+  .menu-hero .cards .card .desc {
+    font-size: 0.64rem;
   }
 }
