--- a/src/pages/contact/style.css
+++ b/src/pages/contact/style.css
@@ -1,15 +1,14 @@
-header, .contact-page .hero {
+.contact-page .hero {
   background-color: #F9F9F7;
 }
 
 .contact-page .hero .title {
   margin: 0 auto;
   text-align: center;
-  width: 40%;
 }
 
 .contact-page .hero .title h1.main-title {
-  font-size: 5.8rem;
+  font-size: 6rem;
   line-height: 6rem;
 }
 
@@ -17,72 +16,15 @@ header, .contact-page .hero {
   color: #495460;
   font-size: 1.125rem;
   font-weight: 400;
-  padding: 1.125rem 1.5rem 0 1.5rem;
+  padding-top: 1.125rem;
   line-height: 1.5rem;
+  width: 53%;
+  margin: 0 auto;
 }
 
 .contact-page .hero {
-  padding: 5rem 0 20rem 0;
+  padding: 5rem 9.5rem 20rem 9.5rem;
   position: relative;
-}
-
-.contact-page .hero .form {
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  transform: translate(-50%, 50%);
-
-  padding: 2.5rem 3.2rem;
-  width: 50%;
-  border-radius: 1rem;
-  border: 1px solid #FFF;
-  background:#FFF;
-
-  box-shadow: 0px 2.979px 59.574px 0px rgba(0, 0, 0, 0.08);
-}
-
-.contact-page .hero .form form {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 1.25rem;
-}
-
-.contact-page .hero .form form > .input-group:nth-child(3), .contact-page .hero .form form > .input-group:nth-child(4), .contact-page .hero .form form > .input-group:nth-child(5) {
-  grid-column: auto / span 2;
-}
-
-.contact-page .hero .form form .input-group > button {
-  width: 100%;
-  padding: 1rem 1.5rem;
-  font-size: 0.9rem;
-}
-
-.contact-page .hero .form .input-group {
-  flex: 1;
-  position: relative;
-}
-
-.contact-page .hero .form form .input-group textarea {
-  border-radius: 1rem;
-  resize: none;
-}
-
-.contact-page .hero .form label {
-  display: block;
-  color: #2C2F24;
-  font-family: 'DM Sans', sans-serif;
-  font-weight: 700;
-}
-
-.contact-page .hero .form .input {
-  font-family: 'DM Sans', sans-serif;
-  border-radius: 4.5rem;
-  border: 1px solid  #DBDFD0;
-  background: #FFF;
-  padding: 1rem 1.5rem;
-  margin-top: 0.5rem;
-  width: 100%;
-  color:#2C2F24;
 }
 
 .contact-page .info {
@@ -115,12 +57,6 @@ header, .contact-page .hero {
   font-weight: 700;
 }
 
-@media only screen and (max-width: 1450px) {
-  .contact-page .hero .title p {
-    padding: 1.125rem 0.5rem 0 0.5rem;
-  }
-}
-
 @media only screen and (max-width: 1370px) {
   
   .contact-page .hero .title h1.main-title {
@@ -130,6 +66,8 @@ header, .contact-page .hero {
   
   .contact-page .hero .title p {
     font-size: 1.05rem;
+    line-height: 1.2rem;
+    width: 57%;
   }
 
   .contact-page .info {
@@ -137,10 +75,14 @@ header, .contact-page .hero {
   }
 }
 
-@media only screen and (max-width: 1300px) {
-  .contact-page .hero .title {
-    width: 42%;
+@media only screen and (max-width: 1315px) {
+  .contact-page .hero .title p {
+    font-size: 1rem;
+    width: 56%;
   }
+}
+
+@media only screen and (max-width: 1300px) {
   .contact-page .hero .title p {
     font-size: 1rem;
   }
@@ -161,13 +103,33 @@ header, .contact-page .hero {
   }
 }
 
-@media only screen and (max-width: 1175px) {
-  .contact-page .hero .title {
-    width: 48%;
+@media only screen and (max-width: 1276px) {
+  .contact-page .hero .title p {
+    font-size: 0.96rem;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .contact-page .hero {
+    padding: 5.5rem 7.5rem 20rem 7.5rem;
+  }
+  .contact-page .hero .title p {
+    font-size: 1rem;
+    line-height: 1.3rem;
   }
   .contact-page .hero .title h1.main-title {
     font-size: 5rem;
-    line-height: 5.2rem;
+    line-height: 5rem;
+  }
+}
+
+@media only screen and (max-width: 1175px) {
+  .contact-page .hero .title h1.main-title {
+    font-size: 4.8rem;
+    line-height: 5rem;
+  }
+  .contact-page .hero .title p {
+    width: 75%;
   }
   .contact-page .info .title {
     font-size: 1rem;
@@ -180,21 +142,20 @@ header, .contact-page .hero {
   }
 }
 
+@media only screen and (max-width: 1122px) {
+  .contact-page .hero {
+    padding: 4.5rem 6.5rem 20rem 6.5rem;
+  }
+}
+
 @media only screen and (max-width: 991px) {
-  .contact-page .hero .title {
-    width: 50%;
-  }
   .contact-page .hero .title h1.main-title {
-    font-size: 4.5rem;
-    line-height: 4.5rem;
-  }
-  
-  .contact-page .hero .title p {
-    font-size: 0.9rem;
+    font-size: 4.3rem;
+    line-height: 4.3rem;
   }
 
   .contact-page .hero {
-    padding: 3rem 0 16rem 0;
+    padding: 3rem 1.5rem 16rem 1.5rem;
   }
 
   .contact-page .info {
@@ -231,16 +192,13 @@ header, .contact-page .hero {
 }
 
 @media only screen and (max-width: 878px) {
-  .contact-page .hero .title {
-    width: 52%;
-  }
-  .contact-page .hero .title h1.main-title {
-    font-size: 4rem;
-    line-height: 4rem;
-  }
-  
   .contact-page .hero .title p {
     font-size: 0.9rem;
+    width: 80%;
+  }
+  .contact-page .hero .title h1.main-title {
+    font-size: 3.8rem;
+    line-height: 3.8rem;
   }
 
   .contact-page .hero {
@@ -277,13 +235,10 @@ header, .contact-page .hero {
   .contact-page .hero .title {
     width: 65%;
   }
-  .contact-page .hero .title h1.main-title {
-    font-size: 3.8rem;
-    line-height: 4rem;
-  }
 
   .contact-page .hero .title p {
     padding-top: 0.5rem;
+    width: 90%;
   }
   .contact-page .hero {
     padding: 3rem 0 13rem 0;
@@ -304,16 +259,15 @@ header, .contact-page .hero {
 }
 
 @media only screen and (max-width: 680px) {
-  .contact-page .hero .title {
-    width: 70%;
-  }
   .contact-page .hero .title h1.main-title {
     font-size: 3.5rem;
     line-height: 3.5rem;
   }
-
   .contact-page .hero .title p {
-    line-height: 1.2rem;
+    font-size: 0.8rem;
+    line-height: 1rem;
+    padding-top: 0.5rem;
+    width: 100%;
   }
 
   .contact-page .hero .form {
@@ -355,16 +309,13 @@ header, .contact-page .hero {
 }
 
 @media only screen and (max-width: 550px) {
-  .contact-page .hero .title {
-    width: 80%;
-  }
-
-  .contact-page .hero .title h1.main-title {
-    font-size: 2.5rem;
-    line-height: 2.5rem;
-  }
   .contact-page .hero .title p {
-    font-size: 0.75rem;
+    font-size: 0.7rem;
+    line-height: 1rem;
+  }
+  .contact-page .hero .title h1.main-title {
+    font-size: 2.8rem;
+    line-height: 2.8rem;
   }
 
   .contact-page .hero .form {
@@ -400,14 +351,12 @@ header, .contact-page .hero {
   .contact-page .hero {
     padding: 2rem 0 10rem 0;
   }
-  .contact-page .hero .title h1.main-title {
-    font-size: 2.05rem;
+  .contact-page .hero h1.main-title {
+    font-size: 2.4rem;
   }
-
-  .contact-page .hero .title p {
-    line-height: 0.8rem;
-    font-size: 0.65rem;
-    padding: 0.5rem 0 0 0;
+  .contact-page .hero p {
+    font-size: 0.7rem;
+    line-height: 1rem;
   }
 
   .contact-page .hero .form {
