--- a/src/atoms/card/style.css
+++ b/src/atoms/card/style.css
@@ -23,3 +23,34 @@
   font-weight: 400;
   line-height: 1.5rem;
 }
+
+/* menu */
+.menu-hero .cards .card .text {
+  padding: 1rem 1.8rem 2rem 1.8rem;
+}
+
+.menu-hero .cards .card img {
+  border-top-left-radius: 0.75rem;
+  border-top-right-radius: 0.75rem;
+  width: 100%;
+}
+
+.menu-hero .cards .card .price {
+  color: #AD343E;
+  font-size: 1.5rem;
+  font-weight: 700;
+  letter-spacing: -0.045rem;
+}
+
+.menu-hero .cards .card .name {
+  color: #2C2F24;
+  font-size: 1.125rem;
+  font-weight: 700;
+  padding: 0.5rem 0;
+}
+
+.menu-hero .cards .card .desc {
+  color: #414536;
+  font-size: 0.95rem;
+  font-weight: 400;
+}
