--- a/src/organisms/header/style.css
+++ b/src/organisms/header/style.css
@@ -9,6 +9,10 @@ header{
   font-size: .8rem;
 }
 
+header.bg-white {
+  background-color: #fff;
+}
+
 header button {
   padding: 0.75rem 1.5rem;
 }
