--- a/src/pages/home/components/content/style.css
+++ b/src/pages/home/components/content/style.css
@@ -83,14 +83,21 @@
     grid-template-columns: 3fr 2fr;
     gap: 4rem;
   }
+  .content-web .container h1.main-title {
+    font-size: 2.6rem;
+  }
 }
 @media only screen and (max-width: 1190px) {
   .content-web .container {
     grid-template-columns: 1fr 1fr;
+    padding: 5.5rem 7.5rem;
   }
   .content-web .container .info-content {
     font-size: 0.85rem;
     padding: 0.25rem;
+  }
+  .content-web .container h1.main-title {
+    font-size: 2.5rem;
   }
   
   .content-web .info-content-icon {
@@ -110,6 +117,9 @@
 @media only screen and (max-width: 991px) {
   .content-web .container {
     gap: 3.6rem;
+  }
+  .content-web .container h1.main-title {
+    font-size: 2.35rem;
   }
 }
 
