--- a/src/pages/menu/components/menu-hero/style.css
+++ b/src/pages/menu/components/menu-hero/style.css
@@ -5,7 +5,6 @@
 .menu-hero .title {
   margin: 0 auto;
   text-align: center;
-  width: 50%;
 }
 
 .menu-hero .title h1.main-title {
@@ -18,7 +17,10 @@
   font-size: 1.125rem;
   font-weight: 400;
   padding-top: 1.125rem;
-  line-height: 1.75rem;
+  line-height: 1.5rem;
+
+  width: 53%;
+  margin: 0 auto;
 }
 
 .menu-hero .buttons button {
@@ -59,52 +61,33 @@
   text-align: center;
 }
 
-.menu-hero .cards .card .text {
-  padding: 1rem 1.8rem 2rem 1.8rem;
-}
-
-.menu-hero .cards .card img {
-  border-top-left-radius: 0.75rem;
-  border-top-right-radius: 0.75rem;
-  width: 100%;
-}
-
-.menu-hero .cards .card .price {
-  color: #AD343E;
-  font-size: 1.5rem;
-  font-weight: 700;
-  letter-spacing: -0.045rem;
-}
-
-.menu-hero .cards .card .name {
-  color: #2C2F24;
-  font-size: 1.125rem;
-  font-weight: 700;
-  padding: 0.5rem 0;
-}
-
-.menu-hero .cards .card .desc {
-  color: #414536;
-  font-size: 0.95rem;
-  font-weight: 400;
-}
-
-
-@media only screen and (max-width: 1520px) {
-  .menu-hero .buttons {
-    width: 70%;
-  }
-}
 @media only screen and (max-width: 1440px) {
-  .menu-hero .title {
-    width: 60%;
-  }
   .menu-hero .cards .card .text {
     padding: 0.7rem 1rem 1.3rem 1rem;
   }
 }
 
+@media only screen and (max-width: 1370px) {
+  .menu-hero .title p {
+    font-size: 1.05rem;
+    line-height: 1.2rem;
+    width: 57%;
+  }
+  .menu-hero .title h1.main-title {
+    font-size: 5.2rem;
+    line-height: 5.5rem;
+  }
+}
+
+@media only screen and (max-width: 1315px) {
+  .menu-hero .title p {
+    font-size: 1rem;
+    width: 56%;
+  }
+}
+
 @media only screen and (max-width: 1300px) {
+  
   .menu-hero .buttons {
     width: 90%;
   }
@@ -125,6 +108,11 @@
   
   .menu-hero .cards .card .desc {
     font-size: 0.85rem;
+  }
+}
+@media only screen and (max-width: 1276px) {
+  .menu-hero .title p {
+    font-size: 0.96rem;
   }
 }
 
@@ -148,13 +136,20 @@
   }
 }
 
-@media only screen and (max-width: 1170px) {
+@media only screen and (max-width: 1175px) {
   .menu-hero .buttons {
     padding-top: 1.5rem;
   }
   .menu-hero .cards {
     padding-top: 3rem;
     gap: 1rem;
+  }
+  .menu-hero .title h1.main-title {
+    font-size: 4.8rem;
+    line-height: 5rem;
+  }
+  .menu-hero .title p {
+    width: 75%;
   }
 }
 
@@ -180,6 +175,13 @@
   }
 }
 
+@media only screen and (max-width: 991px) {
+  .menu-hero .title h1.main-title {
+    font-size: 4.3rem;
+    line-height: 4.3rem;
+  }
+}
+
 @media only screen and (max-width: 897px) {
   .menu-hero .title {
     width: 100%;
@@ -192,13 +194,12 @@
     padding-top: 2.5rem;
   }
   .menu-hero .title p {
-    padding-top: 0.7rem;
     font-size: 0.9rem;
-    line-height: 1.2rem;
+    width: 80%;
   }
   .menu-hero .title h1.main-title {
-    font-size: 3.5rem;
-    line-height: 3.5rem;
+    font-size: 3.8rem;
+    line-height: 3.8rem;
   }
   .menu-hero .buttons button {
     font-size: 0.8rem;
@@ -206,9 +207,29 @@
   }
 }
 
+@media only screen and (max-width: 770px) {
+  .menu-hero .title p {
+    padding-top: 0.5rem;
+    width: 90%;
+  }
+}
+
+@media only screen and (max-width: 680px) {
+  .menu-hero .title h1.main-title {
+    font-size: 3.5rem;
+    line-height: 3.5rem;
+  }
+  .menu-hero .title p {
+    font-size: 0.8rem;
+    line-height: 1rem;
+    padding-top: 0.5rem;
+    width: 100%;
+  }
+}
+
 @media only screen and (max-width: 550px) {
   .menu-hero .title p {
-    font-size: 0.75rem;
+    font-size: 0.7rem;
     line-height: 1rem;
   }
   .menu-hero .title h1.main-title {
