--- a/src/pages/blog/style.css
+++ b/src/pages/blog/style.css
@@ -190,7 +190,7 @@
     font-size: 2.05rem;
   }
   .blog-page .card-box .card-container .card-blog-content {
-    padding: 0.8rem;
+    padding: 0.8rem 0.5rem 1rem 0.5rem;
   }
   .blog-page .card-box .card-container .blog-title {
     font-size: 0.7rem;
