--- a/src/organisms/testimonial/style.css
+++ b/src/organisms/testimonial/style.css
@@ -56,6 +56,7 @@
 @media only screen and (max-width: 768px) {
   .testimonial h1.main-title {
     font-size: 2.2rem;
+    line-height: 2.8rem;
   }
 }
 
@@ -88,5 +89,11 @@
   .testimonial .user-container .user-info h5, .testimonial .user-container .user-info p {
     font-size: 0.9rem;
   }
-  
+}
+
+@media only screen and (max-width: 330px) {
+  .testimonial .container h1.main-title {
+    font-size: 1.8rem;
+    line-height: 2rem;
+  }
 }
