--- a/src/pages/home/components/blog/style.css
+++ b/src/pages/home/components/blog/style.css
@@ -116,6 +116,7 @@
   }
   .blog .heading h1.main-title {
     font-size: 2.2rem;
+    line-height: 2.8rem;
   }
   .blog .blog-content .remarkable-blog {
     margin-bottom: 1.5rem;
@@ -193,5 +194,12 @@
   .blog .heading button {
     padding: 0.5rem 0.8rem;
     font-size: 0.6rem;
+  }
 }
+
+@media only screen and (max-width: 330px) {
+  .blog .heading h1.main-title {
+    font-size: 1.8rem;
+    line-height: 2rem;
+  }
 }
