--- a/src/pages/home/components/hero/style.css
+++ b/src/pages/home/components/hero/style.css
@@ -146,7 +146,7 @@
     height: 22.125rem;
   }
   .carousel .content h1 {
-    font-size: 3.8rem;
+    font-size: 3.2rem;
     line-height: 3rem;
   }
   .carousel .content p {
@@ -162,13 +162,18 @@
     padding: 0.85rem 1.2rem;
   }
 }
+@media only screen and (max-width: 650px) {
+  .carousel{
+    height: 18.125rem;
+  } 
+  .carousel .content {
+    padding: 1.5rem 2rem;
+  }
+}
 /* MOBILE */
 @media only screen and (max-width: 550px) {
   .carousel {
     height: 16.15rem;
-  }
-  .carousel .content {
-    padding: 1rem 8rem;
   }
   .carousel .content h1 {
     font-size: 2.2rem;
